2010-04-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/ops/partialcharges.cpp: Add operation to calculate partial
	charges using any charge method, e.g., --partialcharge qeq.

	* src/CMakeLists.txt: Add it.

2010-04-26  Noel O'Boyle

	* test/CMakeLists.txt, test/testbindings.py, test/test_pybel.py:
	Separate the pybel tests from the Python binding tests
	* scripts/python/examples/testpybel.py: Get the Pybel tests to pass on
	Linux
	* scripts/CMakeLists.txt: Force the Python build to output to
	scripts/pybuild. Otherwise it created a temporary folder whose name
	differed from platform to platform (e.g. lib.linux-x86_64.2.6) which
	made it difficult to handle automatically.

2010-04-25  Noel O'Boyle

	* test\CMakeLists.txt, test\testbindings.py, test\testexample.py:
	Enable the use of the Python bindings for testing. Run the Pybel
	tests. Add a simple example test as a template.
	* scripts\python\examples\testpybel.py: Get the Pybel tests to pass

2010-04-22  Noel O'Boyle

	* src/GUI/OBGUI.cpp: Fixes for Unicode build. Now have SVG depiction
	on Linux also!

2010-04-20  Jiahao Chen <jiahao@mit.edu>

        * src/charges/mmff94.cpp, src/charges/gasteiger.cpp: Fixed leftover
	references to OBPartialCharge (now OBChargeModel)

2010-04-21  Noel O'Boyle

	* scripts/CMakeLists.txt: Edit variables to correspond to Konstantin's
	recent changes (something to do with a superpackage build..?)

2010-04-20  Jiahao Chen <jiahao@mit.edu>

        * src/charges/qeq.h, src/charges/qeq.cpp:
	Added implementation of QEq charge model (Rappe and Goddard, 1991) 

        * src/charges/qtpie.h, src/charges/qtpie.cpp:
	Added implementation of QTPIE charge model (Chen and Martinez, 2007;
	2008)

        * src/atom.cpp: added comments to show how these new charge models can
	be called from within current OpenBabel code
		
        * CMakeLists.txt: added charge models and compile flags for Eigen2
	library (variables copied from Avogadro source tree)
        