@@ -6955,7 +6955,7 @@ y,z,-x
 1/2+y,1/2+z,1/2-x
 
 205
-P 2ac 2ab 3
+-P 2ac 2ab 3
 P a -3
 x,y,z
 1/2-x,-y,1/2+z
